fix gap

--- a/Test1/assets/style/responsive.css
+++ b/Test1/assets/style/responsive.css
@@ -247,8 +247,8 @@
   .px-40-m {
     padding: 0 20px;
   }
-  .mb-60-sm {
-    margin-bottom: 60px;
+  .mb-70-sm {
+    margin-bottom: 70px;
   }
   .navbar-wrapper {
     display: block;
