--- a/Test1/assets/style/style.css
+++ b/Test1/assets/style/style.css
@@ -841,6 +841,7 @@ background: #000;
   background-color: #fff;
   display: none;
   z-index:800;
+  box-shadow: 0px -29px 38px -3px rgba(0,0,0,0.1);
 }
 .menu-bottom-mobile .item {
   flex: 1;
@@ -849,7 +850,7 @@ background: #000;
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  box-shadow: 0px -29px 38px -3px rgba(0,0,0,0.1);
+
 }
 .menu-bottom-mobile .item .icon{
   position: relative;
@@ -859,10 +860,13 @@ background: #000;
   top:-10px;
   left:10px;
 }
-
+.rating{
+  display: flex;
+  gap: 1px;
+  padding:10px 0;
+}
 .rating span{
   font-size: 10px;
-
 }
 
 
